Update privacy policy

--- a/RollTheRabbits/privacy.html
+++ b/RollTheRabbits/privacy.html
@@ -18,7 +18,7 @@
 <p><strong>Application</strong> refers to Roll The Rabbits, the software program provided by the Company.</p>
 </li>
 <li>
-<p><strong>Company</strong> (referred to as either &quot;the Company&quot;, &quot;We&quot;, &quot;Us&quot; or &quot;Our&quot; in this Agreement) refers to Roll The Rabbits.</p>
+<p><strong>Company</strong> (referred to as either &quot;the Company&quot;, &quot;We&quot;, &quot;Us&quot; or &quot;Our&quot; in this Agreement) refers to Paul Anderson, creator of Roll The Rabbits.</p>
 </li>
 <li>
 <p><strong>Country</strong> refers to: Victoria,  Australia</p>
